# ruoyi-vue-pro

./: .gitignore  .gitmodules  .mvn-settings.xml  AGENTS.md  CLAUDE.md  DEPLOY.md  Docker-HOWTO.md  Jenkinsfile  LICENSE  QUICKSTART.md  README.en.md  README.md  README.upstream.md  build.sh  deploy-prod.sh  deploy-test.sh  deploy.sh  docker-compose.full.yml  docker-compose.mongodb-rs.yml  docker-compose.yml  docker.env  fix_missing_tables.sql  http-client.env.json  init.sql  lefthook.yml  lombok.config  pom.xml  restart.bat  ry.sh  serve.sh  start.bat  stop.bat  sync-upstream.bat  tcp-proxy.py  write_files.py  后端学习计划.md  更新日志.md
yaya-ai-service/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
yaya-ai-service/app/: __init__.py  auth.py  evaluations.py  main.py
yaya-ai-service/tests/: test_internal_contract.py
yaya-ai-service/yaya_ai/: __init__.py  _audio.py  _retry.py  errors.py  logging.py
yaya-ai-service/yaya_ai/embedding/: __init__.py  openai.py
yaya-ai-service/yaya_ai/improvement/: __init__.py  chunk_improver.py  types.py
yaya-ai-service/yaya_ai/llm/: __init__.py  anthropic_client.py  base.py  openai_audio_client.py  openai_text_client.py
yaya-ai-service/yaya_ai/rag/: __init__.py
yaya-ai-service/yaya_ai/scoring/: __init__.py  answer_insight.py  audio_scorer.py  content_ops.py  content_rewriter.py  ensemble.py  fluency_metrics.py  ielts_scorer.py  pronunciation_api.py  translator.py
yaya-ai-service/yaya_ai/stt/: __init__.py  base.py  deepgram.py  factory.py  openai_whisper.py
yaya-ai-service/yaya_ai/topic_mapping/: __init__.py  story_mapper.py  (+6 more)
(+31389 files in other folders)
